// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Union default: toObject 1`] = `
Object {
  "description": undefined,
  "items": Array [
    "ITEM",
    "Item",
    "item",
  ],
  "metadata": Object {},
  "name": "UNION",
  "title": undefined,
}
`;

exports[`Union merges: merge 1`] = `
Object {
  "description": undefined,
  "items": Array [
    "ITEM",
    "Item",
    "Item2",
    "Item1",
  ],
  "metadata": Object {},
  "name": "UNION",
  "title": undefined,
}
`;
